--- a/EntityFrameworkConsoleApp/EntityFrameworkConsoleApp.csproj
+++ b/EntityFrameworkConsoleApp/EntityFrameworkConsoleApp.csproj
@@ -47,7 +47,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -57,11 +64,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Genre.cs" />
+    <Compile Include="Migrations\202005261254346_InitialModel.cs" />
+    <Compile Include="Migrations\202005261254346_InitialModel.Designer.cs">
+      <DependentUpon>202005261254346_InitialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202005261317523_InitialModel1.cs" />
+    <Compile Include="Migrations\202005261317523_InitialModel1.Designer.cs">
+      <DependentUpon>202005261317523_InitialModel1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202005261323327_FixedRelationBetweenVideoAndGenre.cs" />
+    <Compile Include="Migrations\202005261323327_FixedRelationBetweenVideoAndGenre.Designer.cs">
+      <DependentUpon>202005261323327_FixedRelationBetweenVideoAndGenre.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Video.cs" />
+    <Compile Include="VidzyContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
@@ -74,6 +98,17 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202005261254346_InitialModel.resx">
+      <DependentUpon>202005261254346_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202005261317523_InitialModel1.resx">
+      <DependentUpon>202005261317523_InitialModel1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202005261323327_FixedRelationBetweenVideoAndGenre.resx">
+      <DependentUpon>202005261323327_FixedRelationBetweenVideoAndGenre.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
