Video classification added , close #3

--- a/EntityFrameworkConsoleApp/EntityFrameworkConsoleApp.csproj
+++ b/EntityFrameworkConsoleApp/EntityFrameworkConsoleApp.csproj
@@ -81,6 +81,10 @@
     <Compile Include="Migrations\202005281118279_VideoGenreRelation.Designer.cs">
       <DependentUpon>202005281118279_VideoGenreRelation.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202005281203053_Add_ClassificationOnVideo.cs" />
+    <Compile Include="Migrations\202005281203053_Add_ClassificationOnVideo.Designer.cs">
+      <DependentUpon>202005281203053_Add_ClassificationOnVideo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -115,6 +119,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202005281118279_VideoGenreRelation.resx">
       <DependentUpon>202005281118279_VideoGenreRelation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202005281203053_Add_ClassificationOnVideo.resx">
+      <DependentUpon>202005281203053_Add_ClassificationOnVideo.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
