--- a/EntityFrameworkConsoleApp/EntityFrameworkConsoleApp.csproj
+++ b/EntityFrameworkConsoleApp/EntityFrameworkConsoleApp.csproj
@@ -85,6 +85,10 @@
     <Compile Include="Migrations\202005281203053_Add_ClassificationOnVideo.Designer.cs">
       <DependentUpon>202005281203053_Add_ClassificationOnVideo.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202005290659306_NameDataTypeFixed.cs" />
+    <Compile Include="Migrations\202005290659306_NameDataTypeFixed.Designer.cs">
+      <DependentUpon>202005290659306_NameDataTypeFixed.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -122,6 +126,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202005281203053_Add_ClassificationOnVideo.resx">
       <DependentUpon>202005281203053_Add_ClassificationOnVideo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202005290659306_NameDataTypeFixed.resx">
+      <DependentUpon>202005290659306_NameDataTypeFixed.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
